--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,39 +1,36 @@
 window:
   opacity: 0.7
-
-# Base16 Atelier Seaside - alacritty color config
-# Bram de Haan (http://atelierbramdehaan.nl)
+# Base16 Gruvbox dark, hard 256 - alacritty color config
+# Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
 colors:
   # Default colors
   primary:
-    background: '0x000010'
-    foreground: '0x8ca68c'
+    background: '0x1d2021'
+    foreground: '0xd5c4a1'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '0x131513'
-    cursor: '0x8ca68c'
+    text: '0x1d2021'
+    cursor: '0xd5c4a1'
 
   # Normal colors
   normal:
-    black:   '0x131513'
-    red:     '0xe6193c'
-    green:   '0x29a329'
-    yellow:  '0x98981b'
-    blue:    '0x3d62f5'
-    magenta: '0xad2bee'
-    cyan:    '0x1999b3'
-    white:   '0x8ca68c'
+    black:   '0x1d2021'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xd5c4a1'
 
   # Bright colors
   bright:
-    black:   '0x687d68'
-    red:     '0x87711d'
-    green:   '0x242924'
-    yellow:  '0x5e6e5e'
-    blue:    '0x809980'
-    magenta: '0xcfe8cf'
-    cyan:    '0xe619c3'
-    white:   '0xf4fbf4'
-
-draw_bold_text_with_bright_colors: false
+    black:   '0x665c54'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xfbf1c7'
