--- a/config
+++ b/config
@@ -122,7 +122,7 @@ bar {
         position top
         mode invisible
 }
-
+bindsym $mod+Shift+space floating toggle
 # Gaps
 # gaps inner 20
 # gaps outer 10
