--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,15 @@
 [colors]
-background = #000010
+background = #000000
 background-alt = #101010
-foreground = #C5C8C6
-primary = #FF4F00
+foreground = #f5deb3
+primary = #eeeeee
 secondary = #0000ff
 alert = #A54242
-disabled = #00ff00
+disabled = #0000f0
 
 [bar/example]
 width = 100%
-height = 18pt
+height = 14pt
 radius = 0
 
 background = ${colors.background}
@@ -37,6 +37,8 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
+
+bottom = true
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -67,7 +69,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#FF4F00}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %{F#eeeeee}%mountpoint%%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
