--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,11 +1,17 @@
+font:
+  size: 14
+  normal:
+    family: Ubuntu Mono
+
 window:
-  opacity: 0.7
+  opacity: 0.8
+
 # Base16 Gruvbox dark, hard 256 - alacritty color config
 # Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
 colors:
   # Default colors
   primary:
-    background: '0x1d2021'
+    background: '0x000000'
     foreground: '0xd5c4a1'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
@@ -34,3 +40,4 @@ colors:
     magenta: '0xd3869b'
     cyan:    '0x8ec07c'
     white:   '0xfbf1c7'
+
