--- a/.stumpwmrc
+++ b/.stumpwmrc
@@ -1,5 +1,5 @@
 (set-prefix-key (kbd "s-d"))
-(run-shell-command "feh --bg-scale ~/pic/wood.jpg")
+(run-shell-command "feh --bg-scale ~/pic/rei.jpg")
 (run-shell-command "flameshot")
 (run-shell-command "picom")
 (run-shell-command "setxkbmap -layout us,ru -option grp:toggle cale")
@@ -12,12 +12,12 @@
 
 (set-msg-border-width 2)
 
-(set-fg-color "#ebdbb2")
-(set-bg-color "#1d2021")
+(set-fg-color "#eeeeee")
+(set-bg-color "#000000")
 (set-border-color "#113637")
 (set-focus-color "#458588")
 (set-unfocus-color "#113637") ;; #b9bb26
-(set-win-bg-color "#1d2021")
+(set-win-bg-color "#000000")
 (set-float-focus-color "#d3869b")
 (set-float-unfocus-color "#cc241d")
 
@@ -26,33 +26,41 @@
                                             "run-shell-command "
                                             ,command)))
 
-(bind-shell-to-key "c" "kitty")
+(bind-shell-to-key "c" "st")
 
 (bind-shell-to-key "y" "amixer set Master 10%+")
 (bind-shell-to-key "Y" "amixer set Master 1%+")
 (bind-shell-to-key "u" "amixer set Master 10%-")
 (bind-shell-to-key "U" "amixer set Master 1%-")
 (bind-shell-to-key "SunPrint_Screen" "flameshot gui")
-(bind-shell-to-key "t" "telegram-desktop")
-(bind-shell-to-key "T" "killall -q telegram-desktop")
+(bind-shell-to-key "t" "Telegram")
+(bind-shell-to-key "T" "killall -q Telegram")
 (bind-shell-to-key "j" "amixer set Master toggle")
 
 (setf *mouse-focus-policy* :click
       *window-border-style* :thin
-      *mode-line-background-color* "#1d2021"
-      *mode-line-foreground-color* "#ebdbb2"
-      *mode-line-border-color* "#1d2021"
+      *mode-line-background-color* "#000000"
+      *mode-line-foreground-color* "#eeeeee"
+      *mode-line-border-color* "#000000"
       *mode-line-timeout* 1
       *mode-line-border-width* 1
 )
 
 (setf stumpwm:*screen-mode-line-format*
       (list "%g "
-            '(:eval (stumpwm:run-shell-command "bash ~/scr/mode.sh" t))))
+            '(:eval (stumpwm:run-shell-command "bash ~/scripts/mode.sh" t))))
 
 ;; turn on/off the mode line for the current head only.
 (stumpwm:toggle-mode-line (stumpwm:current-screen)
                           (stumpwm:current-head))
 
+(load-module "swm-gaps")
+(setf swm-gaps:*head-gaps-size* 20)
+(setf swm-gaps:*inner-gaps-size* 5)
+(setf swm-gaps:*outer-gaps-size* 30)
 
+(load-module "shell-command-history")
 
+(run-shell-command "xmodmap -e 'clear mod4'" t) ;; clears windowskey/mod4
+(run-shell-command "xmodmap -e \'keycode 133 = F20\'" t) ;;assigns F20 to keycode 133
+(set-prefix-key (kbd "F20")) ;; sets prefix to F20 which was just assigned to windows key
