--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,40 +1,36 @@
-window:
-  opacity: 1.0
+[colors.bright]
+black = "#665c54"
+blue = "#83a598"
+cyan = "#8ec07c"
+green = "#b8bb26"
+magenta = "#d3869b"
+red = "#fb4934"
+white = "#fbf1c7"
+yellow = "#fabd2f"
 
-font:
-  normal:
-    family: terminus
-  size: 12.0
+[colors.cursor]
+cursor = "#d5c4a1"
+text = "#1d2021"
 
-colors:
-  # Default colors
-  primary:
-    background: '#1d2021'
-    foreground: '#d5c4a1'
+[colors.normal]
+black = "#1d2021"
+blue = "#83a598"
+cyan = "#8ec07c"
+green = "#b8bb26"
+magenta = "#d3869b"
+red = "#fb4934"
+white = "#d5c4a1"
+yellow = "#fabd2f"
 
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '#1d2021'
-    cursor: '#d5c4a1'
+[colors.primary]
+background = "#1d2021"
+foreground = "#d5c4a1"
 
-  # Normal colors
-  normal:
-    black:   '#1d2021'
-    red:     '#fb4934'
-    green:   '#b8bb26'
-    yellow:  '#fabd2f'
-    blue:    '#83a598'
-    magenta: '#d3869b'
-    cyan:    '#8ec07c'
-    white:   '#d5c4a1'
+[font]
+size = 12.0
 
-  # Bright colors
-  bright:
-    black:   '#665c54'
-    red:     '#fb4934'
-    green:   '#b8bb26'
-    yellow:  '#fabd2f'
-    blue:    '#83a598'
-    magenta: '#d3869b'
-    cyan:    '#8ec07c'
-    white:   '#fbf1c7'
+[font.normal]
+family = "terminus"
+
+[window]
+opacity = 0.9
