--- a/.stumpwmrc
+++ b/.stumpwmrc
@@ -1,5 +1,5 @@
 (set-prefix-key (kbd "s-d"))
-(run-shell-command "feh --bg-scale ~/pic/rei.jpg")
+(run-shell-command "feh --bg-scale ~/Pictures/apart.png")
 (run-shell-command "flameshot")
 (run-shell-command "picom")
 (run-shell-command "setxkbmap -layout us,ru -option grp:toggle cale")
@@ -26,15 +26,15 @@
                                             "run-shell-command "
                                             ,command)))
 
-(bind-shell-to-key "c" "st")
+(bind-shell-to-key "c" "alacritty")
 
-(bind-shell-to-key "y" "amixer set Master 10%+")
-(bind-shell-to-key "Y" "amixer set Master 1%+")
-(bind-shell-to-key "u" "amixer set Master 10%-")
-(bind-shell-to-key "U" "amixer set Master 1%-")
+(bind-shell-to-key "y" "pamixer -i 10")
+(bind-shell-to-key "Y" "pamixer -i 5")
+(bind-shell-to-key "u" "pamixer -d 10")
+(bind-shell-to-key "U" "pamixer -d 5")
 (bind-shell-to-key "SunPrint_Screen" "flameshot gui")
-(bind-shell-to-key "t" "Telegram")
-(bind-shell-to-key "T" "killall -q Telegram")
+(bind-shell-to-key "t" "telegram-desktop")
+(bind-shell-to-key "T" "killall -q telegram-desktop")
 (bind-shell-to-key "j" "amixer set Master toggle")
 
 (setf *mouse-focus-policy* :click
@@ -54,13 +54,13 @@
 (stumpwm:toggle-mode-line (stumpwm:current-screen)
                           (stumpwm:current-head))
 
-(load-module "swm-gaps")
-(setf swm-gaps:*head-gaps-size* 20)
-(setf swm-gaps:*inner-gaps-size* 5)
-(setf swm-gaps:*outer-gaps-size* 30)
+;(load-module "swm-gaps")
+;(setf swm-gaps:*head-gaps-size* 20)
+;(setf swm-gaps:*inner-gaps-size* 5)
+;(setf swm-gaps:*outer-gaps-size* 30)
 
-(load-module "shell-command-history")
+;(load-module "shell-command-history")
 
-(run-shell-command "xmodmap -e 'clear mod4'" t) ;; clears windowskey/mod4
-(run-shell-command "xmodmap -e \'keycode 133 = F20\'" t) ;;assigns F20 to keycode 133
-(set-prefix-key (kbd "F20")) ;; sets prefix to F20 which was just assigned to windows key
+;(run-shell-command "xmodmap -e 'clear mod4'" t) ;; clears windowskey/mod4
+;(run-shell-command "xmodmap -e \'keycode 133 = F20\'" t) ;;assigns F20 to keycode 133
+;(set-prefix-key (kbd "F20")) ;; sets prefix to F20 which was just assigned to windows key
